{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 58,
  "lineage": "a17a523b-4de4-e2cf-5735-eea9d0d27a70",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:loadbalancer/app/HTTP-service-lb/32173987b65bd687",
            "arn_suffix": "app/HTTP-service-lb/32173987b65bd687",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "HTTP-service-lb-1829759397.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697239284:loadbalancer/app/HTTP-service-lb/32173987b65bd687",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "HTTP-service-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0276e85b2dafbb370"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03cdadf0753db35b0"
              },
              {
                "subnet_id": "subnet-0da96e14a5bd5d3d3"
              }
            ],
            "subnets": [
              "subnet-03cdadf0753db35b0",
              "subnet-0da96e14a5bd5d3d3"
            ],
            "tags": {
              "Name": "Finzla-Tech"
            },
            "tags_all": {
              "Name": "Finzla-Tech"
            },
            "vpc_id": "vpc-0784359feeade3ee4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:loadbalancer/app/HTTP-service-lb/32173987b65bd687"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:listener/app/HTTP-service-lb/32173987b65bd687/e9ebce4c66867ce9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:targetgroup/HTTP-service-TG/796ec6cf90a8d697",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697239284:listener/app/HTTP-service-lb/32173987b65bd687/e9ebce4c66867ce9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:loadbalancer/app/HTTP-service-lb/32173987b65bd687",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:listener/app/HTTP-service-lb/32173987b65bd687/e9ebce4c66867ce9"
          },
          "dependencies": [
            "module.alb.aws_lb.app_lb",
            "module.alb.aws_lb_target_group.alb_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:targetgroup/HTTP-service-TG/796ec6cf90a8d697",
            "arn_suffix": "targetgroup/HTTP-service-TG/796ec6cf90a8d697",
            "deregistration_delay": "120",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:536697239284:targetgroup/HTTP-service-TG/796ec6cf90a8d697",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:536697239284:loadbalancer/app/HTTP-service-lb/32173987b65bd687"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "HTTP-service-TG",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Finzla-Tech"
            },
            "tags_all": {
              "Name": "Finzla-Tech"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536697239284:targetgroup/HTTP-service-TG/796ec6cf90a8d697"
          },
          "dependencies": [
            "module.alb.aws_lb.app_lb",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:security-group/sg-0276e85b2dafbb370",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0276e85b2dafbb370",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "App-LB-SG",
            "name_prefix": "",
            "owner_id": "536697239284",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Finzla-Tech"
            },
            "tags_all": {
              "Name": "Finzla-Tech"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "sg-0276e85b2dafbb370",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4249651434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0276e85b2dafbb370",
            "security_group_rule_id": "sgr-02ac1c799db82209f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2585036796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0276e85b2dafbb370",
            "security_group_rule_id": "sgr-04ef4e7e38fbf660c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:security-group/sg-0f1ca5ba86cb40952",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1ca5ba86cb40952",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0276e85b2dafbb370"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "Python-HTTP-service-tasks-2fa535bfe4773de1ea929a3c51",
            "name_prefix": "Python-HTTP-service-tasks-",
            "owner_id": "536697239284",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "sg-0f1ca5ba86cb40952",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01eb1110d1b4f4789",
            "arn": "arn:aws:ec2:us-east-1:536697239284:elastic-ip/eipalloc-01eb1110d1b4f4789",
            "association_id": "eipassoc-0f1c950cf482a1a46",
            "domain": "vpc",
            "id": "eipalloc-01eb1110d1b4f4789",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d75b2e377bfd27e",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-52-205-39-13.compute-1.amazonaws.com",
            "public_ip": "52.205.39.13",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla-nat_eip_1"
            },
            "tags_all": {
              "Name": "finzla-nat_eip_1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "eipalloc-01eb1110d1b4f4789",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:internet-gateway/igw-06e683709f7857eed",
            "id": "igw-06e683709f7857eed",
            "owner_id": "536697239284",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla-igw"
            },
            "tags_all": {
              "Name": "finzla-igw"
            },
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "igw-06e683709f7857eed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private_subnets_natGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01eb1110d1b4f4789",
            "association_id": "eipassoc-0f1c950cf482a1a46",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-046d8a1f047243b84",
            "network_interface_id": "eni-08d75b2e377bfd27e",
            "private_ip": "10.0.1.145",
            "public_ip": "52.205.39.13",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da96e14a5bd5d3d3",
            "tags": {
              "Name": "finzla-private_natGW_1"
            },
            "tags_all": {
              "Name": "finzla-private_natGW_1"
            },
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "nat-046d8a1f047243b84",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e683709f7857eed",
            "id": "r-rtb-013d5a23a8f9c54b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-013d5a23a8f9c54b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-013d5a23a8f9c54b2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-011ebd27705427a4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-046d8a1f047243b84",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-011ebd27705427a4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-011ebd27705427a4c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.private_subnets_natGW",
            "module.vpc.aws_route_table.app_private_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078adae4e5a0d1c7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-046d8a1f047243b84",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-078adae4e5a0d1c7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-078adae4e5a0d1c7b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.private_subnets_natGW",
            "module.vpc.aws_route_table.app_private_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:route-table/rtb-011ebd27705427a4c",
            "id": "rtb-011ebd27705427a4c",
            "owner_id": "536697239284",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046d8a1f047243b84",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finzla-private_rt_1"
            },
            "tags_all": {
              "Name": "finzla-private_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtb-011ebd27705427a4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:route-table/rtb-078adae4e5a0d1c7b",
            "id": "rtb-078adae4e5a0d1c7b",
            "owner_id": "536697239284",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046d8a1f047243b84",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finzla-private_rt_2"
            },
            "tags_all": {
              "Name": "finzla-private_rt_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtb-078adae4e5a0d1c7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:route-table/rtb-013d5a23a8f9c54b2",
            "id": "rtb-013d5a23a8f9c54b2",
            "owner_id": "536697239284",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e683709f7857eed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finzla-public-rt"
            },
            "tags_all": {
              "Name": "finzla-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtb-013d5a23a8f9c54b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de56d2423690b1bb",
            "region": "us-east-1",
            "route_table_id": "rtb-011ebd27705427a4c",
            "subnet_id": "subnet-0d6c95bbfe53c450d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtbassoc-0de56d2423690b1bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.app_private_route_table",
            "module.vpc.aws_subnet.app_private_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ef410cdfd372f4",
            "region": "us-east-1",
            "route_table_id": "rtb-078adae4e5a0d1c7b",
            "subnet_id": "subnet-05d48bb817027879a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtbassoc-019ef410cdfd372f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.app_private_route_table",
            "module.vpc.aws_subnet.app_private_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b4d68eeda349361",
            "region": "us-east-1",
            "route_table_id": "rtb-013d5a23a8f9c54b2",
            "subnet_id": "subnet-0da96e14a5bd5d3d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtbassoc-01b4d68eeda349361",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd11fc06ae17e43d",
            "region": "us-east-1",
            "route_table_id": "rtb-013d5a23a8f9c54b2",
            "subnet_id": "subnet-03cdadf0753db35b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "rtbassoc-0bd11fc06ae17e43d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:subnet/subnet-0d6c95bbfe53c450d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6c95bbfe53c450d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697239284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla-private_subnet_1"
            },
            "tags_all": {
              "Name": "finzla-private_subnet_1"
            },
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "subnet-0d6c95bbfe53c450d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:subnet/subnet-05d48bb817027879a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d48bb817027879a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697239284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla-private_subnet_2"
            },
            "tags_all": {
              "Name": "finzla-private_subnet_2"
            },
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "subnet-05d48bb817027879a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:subnet/subnet-0da96e14a5bd5d3d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da96e14a5bd5d3d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697239284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla-public-subnet-1"
            },
            "tags_all": {
              "Name": "finzla-public-subnet-1"
            },
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "subnet-0da96e14a5bd5d3d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:subnet/subnet-03cdadf0753db35b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cdadf0753db35b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697239284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla-public-subnet-2"
            },
            "tags_all": {
              "Name": "finzla-public-subnet-2"
            },
            "vpc_id": "vpc-0784359feeade3ee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "subnet-03cdadf0753db35b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.finzla_vpc",
            "module.vpc.data.aws_availability_zones.AZs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "finzla_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536697239284:vpc/vpc-0784359feeade3ee4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07159ca852ab9e26f",
            "default_route_table_id": "rtb-021ae296aefcf6cf7",
            "default_security_group_id": "sg-0bff9e9ef92072caa",
            "dhcp_options_id": "dopt-0450bfeb35529deb4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0784359feeade3ee4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021ae296aefcf6cf7",
            "owner_id": "536697239284",
            "region": "us-east-1",
            "tags": {
              "Name": "finzla"
            },
            "tags_all": {
              "Name": "finzla"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "536697239284",
            "id": "vpc-0784359feeade3ee4",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}